--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_USERNAME="AESiR-0"
-MONGODB_PASSWORD="vTR8zil0TBPw35K1"
+GOOGLE_CLIENT_ID = "683629199093-cmpvab843k5u2gv0j21fkvj2vfn2f7gb.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
