--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "localbase": "^0.7.5",
     "mongodb": "^6.3.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
