--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.6.0",
     "localbase": "^0.7.5",
     "mongodb": "^6.3.0",
     "next": "14.0.3",
